--- a/Project_Management_App/pom.xml
+++ b/Project_Management_App/pom.xml
@@ -7,8 +7,8 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>dtu</groupId>
-	<artifactId>put_your_project_name_here</artifactId>
-	<name>put_your_project_name_here</name>
+	<artifactId>Project_Management_App</artifactId>
+	<name>Project_Management_App</name>
 	<version>SNAPSHOT 0.0.1</version>
 
 	<properties>
